--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   body{
     margin:0;color:var(--txt);
     font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Arial;
-    background:radial-gradient(1300px 800px at 50% -10%,#16508e 0%,#0e2f5b 40%,#0a1f3e 100%),linear-gradient(180deg,var(--bg1),var(--bg2));
-    min-height:100vh;
-    display:flex;flex-direction:column; /* sticky footer layout */
+    background:radial-gradient(1300px 800px at 50% -10%,#16508e 0%,#0e2f5b 40%,#0a1f3e 100%),
+               linear-gradient(180deg,var(--bg1),var(--bg2));
+    min-height:100vh; display:flex; flex-direction:column;
     overflow-y:auto;
   }
   .wrap{max-width:1180px;margin:auto;padding:28px 16px 40px;flex:1}
@@ -171,15 +171,46 @@
   const fmt1=(v,u='')=>(v==null||Number.isNaN(v))?'—':`${(Math.round(v*10)/10).toFixed(1)}${u}`;
   const toF=c=>(c*9/5)+32;
 
-  const WMO={0:['Jasno','sun'],1:['Prevažne jasno','sun'],2:['Polojasno','cloud-sun'],3:['Zamračené','cloud'],45:['Hmla','fog'],48:['Mrznúca hmla','fog'],51:['Slabé mrholenie','drizzle'],53:['Mrholenie','drizzle'],55:['Silné mrholenie','drizzle'],61:['Slabý dážď','rain'],63:['Dážď','rain'],65:['Lejak','rain'],66:['Mrznúci dážď','sleet'],67:['Mrznúci dážď','sleet'],71:['Slabé sneženie','snow'],73:['Sneženie','snow'],75,['Silné sneženie','snow'],77:['Snehové zrná','snow'],80:['Prehánky','rain'],81:['Prehánky','rain'],82:['Silné prehánky','rain'],85:['Snehové prehánky','snow'],86:['Silné snehové prehánky','snow'],95:['Búrky','storm'],96:['Búrky s krúpami','storm'],99:['Silné búrky s krúpami','storm']};
+  const WMO={
+    0:['Jasno','sun'],1:['Prevažne jasno','sun'],2:['Polojasno','cloud-sun'],3:['Zamračené','cloud'],
+    45:['Hmla','fog'],48:['Mrznúca hmla','fog'],
+    51:['Slabé mrholenie','drizzle'],53:['Mrholenie','drizzle'],55:['Silné mrholenie','drizzle'],
+    61:['Slabý dážď','rain'],63:['Dážď','rain'],65:['Lejak','rain'],
+    66:['Mrznúci dážď','sleet'],67:['Mrznúci dážď','sleet'],
+    71:['Slabé sneženie','snow'],73:['Sneženie','snow'],75:['Silné sneženie','snow'],
+    77:['Snehové zrná','snow'],
+    80:['Prehánky','rain'],81:['Prehánky','rain'],82:['Silné prehánky','rain'],
+    85:['Snehové prehánky','snow'],86:['Silné snehové prehánky','snow'],
+    95:['Búrky','storm'],96:['Búrky s krúpami','storm'],99:['Silné búrky s krúpami','storm']
+  };
   const uvCat=u=>u<3?'nízky':u<6?'mierny':u<8?'vysoký':u<11?'veľmi vysoký':'extrémny';
-  function wmoEmoji(code){const k=Number(code);if([0,1].includes(k))return'☀️';if([2].includes(k))return'⛅';if([3].includes(k))return'☁️';if([45,48].includes(k))return'🌫️';if([51,53,55].includes(k))return'🌦️';if([61,63,65,80,81,82].includes(k))return'🌧️';if([71,73,75,77,85,86].includes(k))return'❄️';if([95,96,99].includes(k))return'⛈️';return'🌤️'}
+  function wmoEmoji(code){
+    const k=Number(code);
+    if([0,1].includes(k)) return '☀️';
+    if([2].includes(k)) return '⛅';
+    if([3].includes(k)) return '☁️';
+    if([45,48].includes(k)) return '🌫️';
+    if([51,53,55].includes(k)) return '🌦️';
+    if([61,63,65,80,81,82].includes(k)) return '🌧️';
+    if([71,73,75,77,85,86].includes(k)) return '❄️';
+    if([95,96,99].includes(k)) return '⛈️';
+    return '🌤️';
+  }
 
   let state={units:'c',place:'Bratislava, SK',lat:48.1486,lon:17.1077,last:null};
   let hourlyChart=null;
 
   const LS_KEY='wx_prefs_v1';
-  (function(){try{const raw=localStorage.getItem(LS_KEY);if(raw){const p=JSON.parse(raw);if(typeof p.lat==='number'&&typeof p.lon==='number'&&typeof p.place==='string'){state.lat=p.lat;state.lon=p.lon;state.place=p.place}if(p.units==='c'||p.units==='f'){state.units=p.units}}}catch(e){}})();
+  (function(){
+    try{
+      const raw=localStorage.getItem(LS_KEY);
+      if(raw){
+        const p=JSON.parse(raw);
+        if(typeof p.lat==='number'&&typeof p.lon==='number'&&typeof p.place==='string'){state.lat=p.lat;state.lon=p.lon;state.place=p.place}
+        if(p.units==='c'||p.units==='f'){state.units=p.units}
+      }
+    }catch(e){}
+  })();
   function savePrefs(){try{localStorage.setItem(LS_KEY,JSON.stringify({lat:state.lat,lon:state.lon,place:state.place,units:state.units}))}catch(e){}}
 
   async function fetchWeather(){
@@ -191,8 +222,10 @@
       daily:'weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,precipitation_probability_max,wind_speed_10m_max,uv_index_max,sunrise,sunset',
       forecast_days:'3'
     });
-    const r=await fetch(`https://api.open-meteo.com/v1/forecast?${p}`);if(!r.ok)throw new Error('Načítanie zlyhalo');
-    state.last=await r.json();renderAll();drawHourly();fetchModels('ecmwf');fetchHistory().catch(()=>{});
+    const r=await fetch(`https://api.open-meteo.com/v1/forecast?${p}`);
+    if(!r.ok) throw new Error('Načítanie zlyhalo');
+    state.last=await r.json();
+    renderAll(); drawHourly(); fetchModels('ecmwf'); fetchHistory().catch(()=>{});
   }
 
   function renderAll(){
@@ -202,11 +235,12 @@
     $('#time').textContent=new Intl.DateTimeFormat('sk-SK',{dateStyle:'medium',timeStyle:'short',timeZone:tz}).format(new Date(cur.time));
     const t=state.units==='c'?cur.temperature_2m:toF(cur.temperature_2m);
     const app=state.units==='c'?cur.apparent_temperature:toF(cur.apparent_temperature);
-    $('#temp').textContent=fmt0(t,'°');$('#apparent').textContent=fmt0(app,'°');
+    $('#temp').textContent=fmt0(t,'°'); $('#apparent').textContent=fmt0(app,'°');
     $('#wind').textContent=fmt1(cur.wind_speed_10m,' km/h');
     $('#hum').textContent=fmt0(cur.relative_humidity_2m,'%');
     $('#press').textContent=fmt0(cur.pressure_msl,' hPa');
     $('#icon').textContent=wmoEmoji(cur.weather_code);
+
     const uvi=cur.uv_index??d.daily?.uv_index_max?.[0]??null;
     $('#uv').textContent=`UV ${uvi!=null?fmt1(uvi):'—'} • ${uvi!=null?uvCat(uvi):'—'}`;
 
@@ -232,10 +266,10 @@
 
   function drawHourly(){
     const d=state.last,cur=d.current,hours=d.hourly.time,key=(cur.time||'').slice(0,13);
-    let i=hours.findIndex(h=>h.slice(0,13)===key);if(i<0)i=0;
+    let i=hours.findIndex(h=>h.slice(0,13)===key); if(i<0) i=0;
     const labels=hours.slice(i,i+24).map(h=>h.split('T')[1]);
-    const t24c=d.hourly.temperature_2m.slice(i,i+24),t24=state.units==='c'?t24c:t24c.map(toF);
-    if(hourlyChart)hourlyChart.destroy();
+    const t24c=d.hourly.temperature_2m.slice(i,i+24), t24=state.units==='c'?t24c:t24c.map(toF);
+    if(hourlyChart) hourlyChart.destroy();
     hourlyChart=new Chart($('#hourly'),{
       type:'line',
       data:{labels,datasets:[{label:state.units==='c'?'Teplota (°C)':'Teplota (°F)',data:t24,borderWidth:2,pointRadius:2,tension:.35}]},
@@ -245,7 +279,7 @@
         plugins:{
           legend:{
             labels:{color:'#fff'},
-            onClick:(e,li,legend)=>{},
+            onClick:(e,li,legend)=>{}, // zakáže vypínanie datasetu
             onHover:(e)=>{ if(e && e.native) e.native.target.style.cursor='default'; }
           }
         }
@@ -254,11 +288,33 @@
   }
 
   function lerp(a,b,t){return a+(b-a)*t}
-  function valueAt15min(timesISO,arr,date){const ts=timesISO.map(t=>new Date(t));for(let i=0;i<ts.length-1;i++){const t0=ts[i],t1=ts[i+1];if(date>=t0&&date<=t1){const r=(date-t0)/(t1-t0),v0=arr[i],v1=arr[i+1];if(v0==null||v1==null)return null;return lerp(v0,v1,r)}}return null}
-  function codeAt15min(timesISO,codes,date){const ts=timesISO.map(t=>new Date(t));for(let i=0;i<ts.length-1;i++){const t0=ts[i],t1=ts[i+1];if(date>=t0&&date<=t1){const mid=new Date((t0.getTime()+t1.getTime())/2);return date<mid?codes[i]:codes[i+1]}}return codes[codes.length-1]??0}
+  function valueAt15min(timesISO,arr,date){
+    const ts=timesISO.map(t=>new Date(t));
+    for(let i=0;i<ts.length-1;i++){
+      const t0=ts[i], t1=ts[i+1];
+      if(date>=t0 && date<=t1){
+        const r=(date-t0)/(t1-t0), v0=arr[i], v1=arr[i+1];
+        if(v0==null || v1==null) return null;
+        return lerp(v0,v1,r);
+      }
+    }
+    return null;
+  }
+  function codeAt15min(timesISO,codes,date){
+    const ts=timesISO.map(t=>new Date(t));
+    for(let i=0;i<ts.length-1;i++){
+      const t0=ts[i], t1=ts[i+1];
+      if(date>=t0 && date<=t1){
+        const mid=new Date((t0.getTime()+t1.getTime())/2);
+        return date<mid ? codes[i] : codes[i+1];
+      }
+    }
+    return codes[codes.length-1] ?? 0;
+  }
   function renderMin15(){
-    const d=state.last;const box=$('#min15');box.innerHTML='';
-    const start=new Date(d.current.time);const m=start.getMinutes();const add=(15-(m%15))%15;if(add>0)start.setMinutes(m+add,0,0);
+    const d=state.last; const box=$('#min15'); box.innerHTML='';
+    const start=new Date(d.current.time);
+    const m=start.getMinutes(); const add=(15-(m%15))%15; if(add>0) start.setMinutes(m+add,0,0);
     for(let k=0;k<24;k++){
       const t=new Date(start.getTime()+k*15*60*1000);
       const tmp=valueAt15min(d.hourly.time,d.hourly.temperature_2m,t);
@@ -266,12 +322,12 @@
       const code=codeAt15min(d.hourly.time,d.hourly.weather_code,t);
       const wind=valueAt15min(d.hourly.time,d.hourly.wind_speed_10m,t);
       const tempDisplay=state.units==='c'?tmp:(tmp!=null?toF(tmp):null);
-      const el=document.createElement('div');el.className='slot15';
+      const el=document.createElement('div'); el.className='slot15';
       el.innerHTML=`<div class="sub">${t.toLocaleTimeString('sk-SK',{hour:'2-digit',minute:'2-digit'})}</div>
                     <div class="em">${wmoEmoji(code)}</div>
                     <div class="tt">${fmt0(tempDisplay,'°')}</div>
                     <div class="sub">${prep!=null?fmt1(prep,' mm/h'):'—'} • vietor ${wind!=null?fmt1(wind,' km/h'):'—'}</div>`;
-      box.appendChild(el)
+      box.appendChild(el);
     }
   }
 
@@ -279,82 +335,93 @@
     ['ecmwf','icon','gfs'].forEach(k=>$('#tab-'+k).classList.toggle('active',k===which));
     const tz=Intl.DateTimeFormat().resolvedOptions().timeZone;
     const daily='weather_code,temperature_2m_max,temperature_2m_min,precipitation_probability_max';
-    let base='';if(which==='ecmwf')base='https://api.open-meteo.com/v1/ecmwf';if(which==='icon')base='https://api.open-meteo.com/v1/dwd-icon';if(which==='gfs')base='https://api.open-meteo.com/v1/gfs';
+    let base=''; if(which==='ecmwf') base='https://api.open-meteo.com/v1/ecmwf';
+    if(which==='icon') base='https://api.open-meteo.com/v1/dwd-icon';
+    if(which==='gfs') base='https://api.open-meteo.com/v1/gfs';
     const p=new URLSearchParams({latitude:state.lat,longitude:state.lon,timezone:tz,daily,forecast_days:'7'});
-    try{const r=await fetch(`${base}?${p}`);if(!r.ok)throw 0;const j=await r.json();renderModelGrid(j)}catch(e){$('#modelsGrid').innerHTML='<div style="grid-column:1/-1;color:#ffd4d4;text-align:center">Model sa nepodarilo načítať.</div>'}
+    try{
+      const r=await fetch(`${base}?${p}`); if(!r.ok) throw 0;
+      const j=await r.json(); renderModelGrid(j);
+    }catch(e){
+      $('#modelsGrid').innerHTML='<div style="grid-column:1/-1;color:#ffd4d4;text-align:center">Model sa nepodarilo načítať.</div>';
+    }
   }
   function renderModelGrid(d){
-    const box=$('#modelsGrid');box.innerHTML='';
-    const days=d.daily;const n=Math.min(7,days.time.length);
+    const box=$('#modelsGrid'); box.innerHTML='';
+    const days=d.daily; const n=Math.min(7,days.time.length);
     box.style.gridTemplateColumns=`repeat(${n},minmax(0,1fr))`;
     for(let i=0;i<n;i++){
       const lab=new Date(days.time[i]+'T00:00:00').toLocaleDateString('sk-SK',{weekday:'short',day:'2-digit',month:'2-digit'});
       const code=days.weather_code?.[i];
-      const maxC=days.temperature_2m_max[i],minC=days.temperature_2m_min[i];
-      const max=state.units==='c'?maxC:toF(maxC),min=state.units==='c'?minC:toF(minC);
+      const maxC=days.temperature_2m_max[i], minC=days.temperature_2m_min[i];
+      const max=state.units==='c'?maxC:toF(maxC), min=state.units==='c'?minC:toF(minC);
       const pp=days.precipitation_probability_max?.[i];
-      const el=document.createElement('div');el.className='mcol';
+      const el=document.createElement('div'); el.className='mcol';
       el.innerHTML=`<div style="opacity:.8">${lab}</div>
                     <span class="em">${wmoEmoji(code)}</span>
                     <div class="hi">${fmt0(max,'°')}</div>
                     <div class="lo">${fmt0(min,'°')}</div>
                     <div class="pp">Zrážky: ${pp!=null?pp+'%':'—'}</div>`;
-      box.appendChild(el)
+      box.appendChild(el);
     }
   }
 
   async function fetchHistory(){
     const tz=Intl.DateTimeFormat().resolvedOptions().timeZone;
-    const now=new Date();const lastYear=new Date(now);lastYear.setFullYear(now.getFullYear()-1);
-    const y=lastYear.getFullYear(),m=String(lastYear.getMonth()+1).padStart(2,'0'),d=String(lastYear.getDate()).padStart(2,'0');
+    const now=new Date(); const lastYear=new Date(now); lastYear.setFullYear(now.getFullYear()-1);
+    const y=lastYear.getFullYear(), m=String(lastYear.getMonth()+1).padStart(2,'0'), d=String(lastYear.getDate()).padStart(2,'0');
     const day=`${y}-${m}-${d}`;
     $('#hist-date').textContent=new Intl.DateTimeFormat('sk-SK',{dateStyle:'full'}).format(lastYear);
     const daily='weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum';
     const p=new URLSearchParams({latitude:state.lat,longitude:state.lon,timezone:tz,start_date:day,end_date:day,daily});
-    const r=await fetch(`https://archive-api.open-meteo.com/v1/archive?${p}`);if(!r.ok)throw new Error('História sa nepodarila načítať');
-    const j=await r.json();const dd=j.daily;if(!dd||!dd.time?.length)throw new Error('Bez dát');
-    const code=dd.weather_code[0];const tmax=dd.temperature_2m_max[0];const tmin=dd.temperature_2m_min[0];const pr=dd.precipitation_sum?.[0]??0;
-    $('#hist-emoji').textContent=wmoEmoji(code);$('#hist-text').textContent=(WMO[code]?.[0])||'—';
-    const max=state.units==='c'?tmax:toF(tmax);const min=state.units==='c'?tmin:toF(tmin);
+    const r=await fetch(`https://archive-api.open-meteo.com/v1/archive?${p}`); if(!r.ok) throw new Error('História sa nepodarila načítať');
+    const j=await r.json(); const dd=j.daily; if(!dd||!dd.time?.length) throw new Error('Bez dát');
+    const code=dd.weather_code[0]; const tmax=dd.temperature_2m_max[0]; const tmin=dd.temperature_2m_min[0]; const pr=dd.precipitation_sum?.[0]??0;
+    $('#hist-emoji').textContent=wmoEmoji(code);
+    $('#hist-text').textContent=(WMO[code]?.[0])||'—';
+    const max=state.units==='c'?tmax:toF(tmax); const min=state.units==='c'?tmin:toF(tmin);
     $('#hist-max').textContent=`${fmt1(max)}°${state.units==='c'?'C':'F'}`;
     $('#hist-min').textContent=`${fmt1(min)}°${state.units==='c'?'C':'F'}`;
     $('#hist-extra').textContent=pr>0?`Zrážky: ${fmt1(pr,' mm')}`:'Bez zrážok.';
   }
 
-  // rok v pätičke – automaticky
-  document.getElementById('year').textContent = new Date().getFullYear();
+  // rok v pätičke
+  document.addEventListener('DOMContentLoaded',()=>{ const y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear(); });
 
   let timer;
   $('#q').addEventListener('input',e=>{
-    const q=e.target.value.trim();clearTimeout(timer);
-    if(q.length<2){$('#suggestions').style.display='none';return;}
+    const q=e.target.value.trim(); clearTimeout(timer);
+    if(q.length<2){ $('#suggestions').style.display='none'; return; }
     timer=setTimeout(async ()=>{
       const res=await fetch(`https://geocoding-api.open-meteo.com/v1/search?name=${encodeURIComponent(q)}&count=6&language=sk&format=json`).then(r=>r.json()).catch(()=>({}));
-      const arr=res.results||[];const box=$('#suggestions');box.innerHTML='';box.style.display='grid';
-      if(!arr.length){box.innerHTML='<div class="sugg">Nič sa nenašlo</div>';return;}
+      const arr=res.results||[]; const box=$('#suggestions'); box.innerHTML=''; box.style.display='grid';
+      if(!arr.length){ box.innerHTML='<div class="sugg">Nič sa nenašlo</div>'; return; }
       arr.forEach(p=>{
-        const b=document.createElement('div');b.className='sugg';
+        const b=document.createElement('div'); b.className='sugg';
         b.textContent=`${p.name}${p.admin1?`, ${p.admin1}`:''}, ${p.country_code}`;
-        b.addEventListener('click',()=>{state.lat=p.latitude;state.lon=p.longitude;state.place=b.textContent;box.style.display='none';savePrefs();fetchWeather();});
+        b.addEventListener('click',()=>{ state.lat=p.latitude; state.lon=p.longitude; state.place=b.textContent; box.style.display='none'; savePrefs(); fetchWeather(); });
         box.appendChild(b);
       });
     },250);
   });
-  document.addEventListener('click',e=>{const box=$('#suggestions');if(!box.contains(e.target)&&e.target!==$('#q'))box.style.display='none';});
+  document.addEventListener('click',e=>{ const box=$('#suggestions'); if(!box.contains(e.target)&&e.target!==$('#q')) box.style.display='none'; });
 
   $('#geoBtn').addEventListener('click',()=>{
-    if(!navigator.geolocation)return alert('Geolokácia nie je podporovaná.');
-    navigator.geolocation.getCurrentPosition(pos=>{state.lat=pos.coords.latitude;state.lon=pos.coords.longitude;state.place='Moja poloha';$('#suggestions').style.display='none';savePrefs();fetchWeather();});
+    if(!navigator.geolocation) return alert('Geolokácia nie je podporovaná.');
+    navigator.geolocation.getCurrentPosition(pos=>{
+      state.lat=pos.coords.latitude; state.lon=pos.coords.longitude; state.place='Moja poloha';
+      $('#suggestions').style.display='none'; savePrefs(); fetchWeather();
+    });
   });
-  $('#cBtn').addEventListener('click',()=>{state.units='c';$('#cBtn').classList.add('active');$('#fBtn').classList.remove('active');savePrefs();renderAll();drawHourly();fetchModels(document.querySelector('.modelTabs .active').id.split('-')[1]);fetchHistory().catch(()=>{});});
-  $('#fBtn').addEventListener('click',()=>{state.units='f';$('#fBtn').classList.add('active');$('#cBtn').classList.remove('active');savePrefs();renderAll();drawHourly();fetchModels(document.querySelector('.modelTabs .active').id.split('-')[1]);fetchHistory().catch(()=>{});});
+  $('#cBtn').addEventListener('click',()=>{ state.units='c'; $('#cBtn').classList.add('active'); $('#fBtn').classList.remove('active'); savePrefs(); renderAll(); drawHourly(); fetchModels(document.querySelector('.modelTabs .active').id.split('-')[1]); fetchHistory().catch(()=>{}); });
+  $('#fBtn').addEventListener('click',()=>{ state.units='f'; $('#fBtn').classList.add('active'); $('#cBtn').classList.remove('active'); savePrefs(); renderAll(); drawHourly(); fetchModels(document.querySelector('.modelTabs .active').id.split('-')[1]); fetchHistory().catch(()=>{}); });
 
   $('#tab-ecmwf').addEventListener('click',()=>fetchModels('ecmwf'));
   $('#tab-icon').addEventListener('click',()=>fetchModels('icon'));
   $('#tab-gfs').addEventListener('click',()=>fetchModels('gfs'));
 
   fetchWeather().catch(e=>alert(e.message));
-  window.addEventListener('resize',()=>{if(state.last){drawHourly();renderMin15();}});
+  window.addEventListener('resize',()=>{ if(state.last){ drawHourly(); renderMin15(); }});
 </script>
 </body>
 </html>
